--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript">
 		$(document).ready(function(){
 			$('.my-countdown').countdown({
-				until: $.countdown.UTCDate()
+				until: $.countdown.UTCDate(-5, 2016, 4, 8, 0, 0)
 			});
 		})
 
