--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript">
 		$(document).ready(function(){
 			$('.my-countdown').countdown({
-				until: $.countdown.UTCDate(-5, 2016, 4, 8, 0, 0)
+				until: $.countdown.UTCDate(-5, 2016, 4, 8, 0, 0 )
 			});
 		})
 
@@ -26,7 +26,7 @@
 				<h1>World Premiere<h1>
 			</div>
 			
-			<div style="font-size:40px;"class="my-countdown"></div>
+			<div class="my-countdown"></div>
 
 		</div>
 
