--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<script type="text/javascript">
 		$(document).ready(function(){
 			$('.my-countdown').countdown({
-				until: $.countdown.UTCDate(-5, 2016, 4, 8, 0, 0 )
+				until: $.countdown.UTCDate(-5, 2016, 7, 20, 0, 0 ),
+				format: 'dhms',
+
 			});
 		})
 
@@ -22,8 +24,8 @@
 		<div id="world-premier">
 
 			<div class="heading">
-				<h2>Countdown to the</h1>
-				<h1>World Premiere<h1>
+				<h2>Countdown to</h1>
+				<h1>Buya's Boat Bash<h1>
 			</div>
 			
 			<div class="my-countdown"></div>
